--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
+    "react-router": "^7.0.2",
     "react-scripts": "5.0.1",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "uuid": "^11.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
